// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptimizedSsrEngine avoidCachingErrors option when using default cacheStrategyResolver should cache errors if \`avoidCachingErrors\` is set to false 1`] = `
[
  [Error: a-0],
  [Error: a-0],
  [Error: a-0],
]
`;

exports[`OptimizedSsrEngine avoidCachingErrors option when using default cacheStrategyResolver should not cache errors if \`avoidCachingErrors\` is set to true 1`] = `
[
  [Error: a-0],
  [Error: a-1],
  [Error: a-2],
]
`;

exports[`OptimizedSsrEngine cacheStrategyResolver option should cache errors if \`cacheStrategyResolver\` returns true 1`] = `
[
  [Error: a-0],
  [Error: a-0],
  [Error: a-0],
]
`;

exports[`OptimizedSsrEngine cacheStrategyResolver option should not cache errors if \`cacheStrategyResolver\` returns false 1`] = `
[
  [Error: a-0],
  [Error: a-1],
  [Error: a-2],
]
`;
